--- a/main.html
+++ b/main.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script type="module" src="script.js"></script>
 </head>
 <body>
-    
+    <button id="login-button">Spotify</button>
 </body>
 </html>
