--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chromium Player</title>
+    <script type="module" src="script.js"></script>
   </head>
   <body>
     <div id="app"></div>
