--- a/main.html
+++ b/main.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script type="module" src="script.js"></script>
-    \
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -15,9 +14,25 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/all.min.css"
     />
+    <script
+      src="https://kit.fontawesome.com/e2de3a3f6a.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <button id="login-button">Spotify</button>
+
+    <div class="flex flex-row bg-slate-700">
+      <div class="flex flex-col">
+        <input class="border-none rounded-3xl" placeholder="Search" />
+      </div>
+      <div class="flex flex-col">
+        <a><i class="fa-solid fa-moon"></i></a>
+        <a><i class="fa-solid fa-music"></i></a>
+        <a><i class="fa-solid fa-user"></i></a>
+      </div>
+    </div>
 
     <div class="player">
       <div class="wrapper">
