--- a/main.html
+++ b/main.html
@@ -21,8 +21,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <button id="login-button">Spotify</button>
-
     <div class="flex flex-row bg-slate-700 justify-between">
       <div class="mx-5">
         <div
@@ -35,7 +33,7 @@
       <div class="mx-5">
         <a><i class="fa-solid fa-moon mx-3"></i></a>
         <a><i class="fa-solid fa-music mx-3"></i></a>
-        <a><i class="fa-solid fa-user mx-3"></i></a>
+        <a id="login-button"><i class="fa-solid fa-user mx-3"></i></a>
       </div>
     </div>
 
