--- a/main.html
+++ b/main.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script type="module" src="script.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="main.css" />
 
     <script
       src="https://kit.fontawesome.com/e2de3a3f6a.js"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <div class="flex flex-row bg-slate-700 justify-between">
@@ -24,9 +23,48 @@
         </div>
       </div>
       <div class="mx-5">
-        <a><i class="fa-solid fa-moon mx-3"></i></a>
-        <a><i class="fa-solid fa-music mx-3"></i></a>
-        <a id="login-button"><i class="fa-solid fa-user mx-3"></i></a>
+        <button><i class="fa-solid fa-moon mx-3"></i></button>
+
+        <!-- Toggle for playlist-->
+        <button><i class="fa-solid fa-music mx-3"></i></button>
+        <!---->
+
+        <!-- Toggle for account page -->
+        <button
+          id="profile"
+          data-dropdown-toggle="account-dropdown"
+          type="button"
+        >
+          <i class="fa-solid fa-user mx-3"></i>
+        </button>
+        <div
+          id="account-dropdown"
+          class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg w-44 shadow-xl"
+        >
+          <ul
+            class="py-2 text-sm text-gray-700 text-center"
+            aria-labelledby="profile"
+          >
+            <li class="block px-4 py-2" id="profile-name"></li>
+            <li class="block px-4 py-2" id="profile-follower">0 Followers</li>
+            <li>
+              <a
+                href="#"
+                class="block px-4 py-2 hover:bg-green-500 dark:hover:text-white transition-all"
+                >Bookmarks</a
+              >
+            </li>
+            <li>
+              <a
+                id="login-button"
+                href="#"
+                class="block px-4 py-2 text-red-600 hover:bg-green-500 dark:hover:text-white transition-all"
+                >Sign out</a
+              >
+            </li>
+          </ul>
+        </div>
+        <!---->
       </div>
     </div>
 
@@ -110,5 +148,7 @@
       };
     </script>
     -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/flowbite@1.5.1/dist/flowbite.js"></script>
   </body>
 </html>
