--- a/main.html
+++ b/main.html
@@ -51,12 +51,12 @@
               <a
                 href="#"
                 class="block px-4 py-2 hover:bg-green-500 dark:hover:text-white transition-all"
-                >Bookmarks</a
+                >Saved Concerts</a
               >
             </li>
             <li>
               <a
-                id="login-button"
+                id="logout-button"
                 href="#"
                 class="block px-4 py-2 text-red-600 hover:bg-green-500 dark:hover:text-white transition-all"
                 >Sign out</a
