--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chromium Player</title>
-    <script type="module" src="script.js"></script>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
+    <script type="module" src="/script.js"></script>
     <script type="module" src="./ticketmasterAPI.js"></script>
   </body>
 </html>
