--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Spotify Chrome Extension</title>
-  <script type="module" src="./scripts/script.js"></script>
+  <script type="module" src="./scripts/app.js"></script>
   <link rel="stylesheet" href="./styles/main.css" />
   <script src="https://kit.fontawesome.com/e2de3a3f6a.js" crossorigin="anonymous"></script>
 </head>
