Added search and fixed html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify Chrome Extension</title>
-    <script type="module" src="./scripts/app.js"></script>
     <link rel="stylesheet" href="./styles/style.css" />
+    <script type="module" src="./scripts/app.js"></script>
     <script
       src="https://kit.fontawesome.com/e2de3a3f6a.js"
       crossorigin="anonymous"
@@ -27,7 +27,25 @@
             id="song-search"
           />
         </div>
-        <div id="search-result"></div>
+        <div class="rounded-md border-2" id="search-result">
+          <div
+            class="flex w-auto bg-white p-1 hover:bg-green-500 hover:text-white transition-all my-2"
+          >
+            <div class="flex flex-col">
+              <img
+                src="https://www.theglobeandmail.com/resizer/mapm0FFyArteWGSSESdYmBoS8MA=/1200x0/filters:quality(80):format(webp)/arc-anglerfish-tgam-prod-tgam.s3.amazonaws.com/public/3YV2PTJAVFGCVJK5IC6RJYY6EA"
+                class="w-14 aspect-square"
+              />
+            </div>
+            <div class="flex flex-col mx-3">
+              <h1 class="text-lg">Were Going Home</h1>
+              <div class="flex flex-row">
+                <p class="text-xl me-2">&#127348;</p>
+                <h2 class="">Drake</h2>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!---->
       <div class="mx-5">
@@ -49,9 +67,6 @@
             class="h-48 py-2 text-sm text-gray-700 text-center overflow-y-auto"
             aria-labelledby="playlist"
           >
-            <button id="login-button" type="button">
-              <li class="block px-4 py-2">Login</li>
-            </button>
             <li class="block px-4 py-2" id="profile-name"></li>
             <li class="block px-4 py-2" id="profile-followers">0 Followers</li>
             <li>
@@ -89,9 +104,9 @@
             class="py-2 text-sm text-gray-700 text-center"
             aria-labelledby="profile"
           >
-            <button id="login-button" type="button">
-              <li class="block px-4 py-2">Login</li>
-            </button>
+            <li class="block px-4 py-2">
+              <button id="login-button" type="button">Login</button>
+            </li>
             <li class="block px-4 py-2" id="profile-name"></li>
             <li class="block px-4 py-2" id="profile-followers">0 Followers</li>
             <li>
@@ -195,7 +210,6 @@
       };
     </script>
     -->
-    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/flowbite@1.5.1/dist/flowbite.js"></script>
   </body>
 </html>
