--- a/src/result.html
+++ b/src/result.html
@@ -10,14 +10,6 @@
       src="https://kit.fontawesome.com/e2de3a3f6a.js"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style type="text/tailwindcss">
-      @layer utilities {
-        .content-auto {
-          content-visibility: auto;
-        }
-      }
-    </style>
   </head>
   <body>
     <div flex="flex flex-row w-44">
@@ -35,5 +27,6 @@
         </div>
       </div>
     </div>
+    <script type="module" src="../scripts/main.js"></script>
   </body>
 </html>
