--- a/index.html
+++ b/index.html
@@ -27,7 +27,25 @@
             id="song-search"
           />
         </div>
-        <div class="rounded-md border-2" id="search-result"></div>
+        <div class="rounded-md border-2" id="search-result">
+          <div
+            class="flex w-auto bg-white p-1 hover:bg-green-500 hover:text-white transition-all my-2"
+          >
+            <div class="flex flex-col">
+              <img
+                src="${element.album.images[0].url}"
+                class="h-14 aspect-square"
+              />
+            </div>
+            <div class="flex flex-col mx-3">
+              <h1 class="text-lg">dasdassda</h1>
+              <div class="flex flex-row">
+                <p class="text-lg me-2">dsadas</p>
+                <p>$dsa</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!---->
       <div class="mx-5">
