--- a/index.html
+++ b/index.html
@@ -27,25 +27,7 @@
             id="song-search"
           />
         </div>
-        <div class="rounded-md border-2" id="search-result">
-          <div
-            class="flex w-auto bg-white p-1 hover:bg-green-500 hover:text-white transition-all my-2"
-          >
-            <div class="flex flex-col">
-              <img
-                src="${element.album.images[0].url}"
-                class="h-14 aspect-square"
-              />
-            </div>
-            <div class="flex flex-col mx-3">
-              <h1 class="text-lg">dasdassda</h1>
-              <div class="flex flex-row">
-                <p class="text-lg me-2">dsadas</p>
-                <p>$dsa</p>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="rounded-md border-2" id="search-result"></div>
       </div>
       <!---->
       <div class="mx-5">
@@ -61,29 +43,13 @@
         </button>
         <div
           id="playlist-dropdown"
-          class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg w-44 shadow-xl"
+          class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-xl"
         >
           <ul
-            class="h-48 py-2 text-sm text-gray-700 text-center overflow-y-auto"
+            id="playlist-results"
+            class="h-48 py-2 text-sm text-gray-700 overflow-y-auto"
             aria-labelledby="playlist"
-          >
-            <li class="block px-4 py-2" id="profile-followers">0 Followers</li>
-            <li>
-              <a
-                href="#"
-                class="block px-4 py-2 hover:bg-green-500 dark:hover:text-white transition-all"
-                >Saved Concerts</a
-              >
-            </li>
-            <li>
-              <a
-                id="logout-button"
-                href="#"
-                class="block px-4 py-2 text-red-600 hover:bg-green-500 dark:hover:text-white transition-all"
-                >Sign out</a
-              >
-            </li>
-          </ul>
+          ></ul>
         </div>
         <!---->
 
