Toggle view for bookmarked concerts functionality

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           </button>
           <li class="block px-4 py-2" id="profile-name"></li>
           <li class="block px-4 py-2" id="profile-followers">0 Followers</li>
-          <button id="show-favs-btn" class="hover:bg-green-500 dark:hover:text-white transition-all w-full">
-            <li id="see-bookmarks-toggle" class="block px-4 py-2">Saved Concerts</li>
+          <button id="toggle-favs-btn" class="hover:bg-green-500 dark:hover:text-white transition-all w-full">
+            <li id="toggle-favs-text" class="block px-4 py-2">Saved Concerts</li>
           </button>
           <li>
             <a id="logout-button" href="#"
